@@ -18,6 +18,7 @@
   Add "Change Difficulty" button
   Shorten the winning string to "Puzzle Completed!" in most cases
   Bind Escape to return to the start menu
+- Add Escape shortcut to popdown the number picker
 - Add RTL support for earmarks
 - In print multiple dialog:
   Mirror print button with start game button
